--- a/_pages/group.html
+++ b/_pages/group.html
@@ -33,14 +33,14 @@ author_profile: true
   <td> <p class="name-grade" id="Lipeng_Gu">
 	    <b>Lipeng Gu</b> <br />
 	    Ph.D. student (Since 2022)</p>
-	  <p class="other-info" id="Yun_Liu">
+	  <p class="other-info" id="Lipeng_Gu">
 	    <b>Research: </b> 3D Object Detection and Tracking<br />
             <b> Office: </b> 313, College of Computer Science and Technology <br />
             <b> Email: </b> glp1224@163.com <br /></b>gulp1224@nuaa.edu.cn<br /></p> 
 	</td>
   <td> <p class="name-grade" id="Yun_Liu">
-	    <b>Yongzhen Wang</b> <br />
-	    Ph.D. student (Since 2019)</p>
+	    <b>Yun Liu</b> <br />
+	    Ph.D. student (Since 2022)</p>
 	<p class="other-info" id="Fei_Hu">
 	    <b>Research: </b> 3D Point Clouds Processing<br />
             <b> Office: </b> 313, College of Computer Science and Technology <br />
@@ -57,7 +57,7 @@ author_profile: true
 	    <b>Mengjiao Ma</b> <br />
 	    Ph.D. student (Since 2022)</p>
        <p class="other-info" id="Mengjiao_Ma">
-	    <b>Research: </b> Point Clouds Registration<br />
+	    <b>Research: </b> Point Cloud Registration<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
             <b> Email: </b> mengjiao@nuaa.edu.cn </p> 
   </td>
@@ -344,7 +344,7 @@ author_profile: true
 <tr>
   <td> <img src="/images/group/liangyuanzhang.jpg" width="110" height="160"></td>
   <td> <img src="/images/group/siminhu.jpg" width="110" height="160"></td>
-  <td> <img src="/images/group/anzhao.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/anzhao.png" width="110" height="160"></td>
 </tr>
 
 <tr>
@@ -414,11 +414,15 @@ author_profile: true
 <h1>Alumni</h1><br />
 <ul id="alumni">
 <table>
-
+<tr>
+  <td> <img src="/images/group/feihu.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/dingshi.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/jingboqiu.jpg" width="110" height="160"></td>
+</tr>
 <tr>
   <td> <p class="name-grade" id="Fei_Hu">
 	    <b>Fei Hu</b> <br />
-	    M.Sc. student (Since 2020)</p>
+	    M.Sc. student (Graduated in 2023)</p>
 	<p class="other-info" id="Fei_Hu">
 	    <b>Research: </b> Machine Learning<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
@@ -426,7 +430,7 @@ author_profile: true
 	
   <td> <p class="name-grade" id="Ding_Shi">
 	    <b>Ding Shi</b> <br />
-	    M.Sc. student (Since 2020)</p>
+	    M.Sc. student (Graduated in 2023)</p>
 	<p class="other-info" id="Ding_Shi">
 	    <b>Research: </b> Machine Learning<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
@@ -434,7 +438,7 @@ author_profile: true
 	
   <td> <p class="name-grade" id="Jingbo_Qiu">
 	    <b>Jingbo Qiu</b> <br />
-	    M.Sc. student (Since 2020)</p>
+	    M.Sc. student (Graduated in 2023)</p>
 	<p class="other-info" id="Baian_Chen">
 	    <b>Research: </b> Machine Learning<br />
             <b> Office: </b> 106A, College of Computer Science and Technology <br />
@@ -449,16 +453,12 @@ author_profile: true
 
 <td> <p class="name-grade" id="Yongzhen_Wang">
 	    <b>Yongzhen Wang</b> <br />
-	    Ph.D. student (Since 2019)</p>
+	    Ph.D. student (Graduated in 2023)</p>
 	<p class="other-info" id="Yongzhen_Wang">
 	    <b>Research: </b> Image Restoration and Object Detection<br />
             <b> Email: </b> wangyz@nuaa.edu.cn </p> 
 	</td>	
-<tr>
-  <td> <img src="/images/group/feihu.jpg" width="110" height="160"></td>
-  <td> <img src="/images/group/dingshi.jpg" width="110" height="160"></td>
-  <td> <img src="/images/group/jingboqiu.jpg" width="110" height="160"></td>
-</tr>
+
 	
 </table>
 	
