--- a/_pages/group.html
+++ b/_pages/group.html
@@ -389,15 +389,15 @@ author_profile: true
 <ul id="undergraduatestudent">
 <table>
 <tr>
-  <td> <img src="/images/group/shijiewang.jpg" width="110" height="160"></td>
+  <td> <img src="/images/group/shiweiwang.jpg" width="110" height="160"></td>
   <td> </td>
   <td></td>
 </tr>
 <tr>
-  <td> <p class="name-grade" id="Shijie_Wang">
-	    <b>Shijie Wang</b> <br />
+  <td> <p class="name-grade" id="Shiwei_Wang">
+	    <b>Shiwei Wang</b> <br />
 	    Undergraduate student (Since 2023)</p>
-       <p class="other-info" id="Yinuo_Zheng">
+       <p class="other-info" id="Shiwei_Wang">
 	    <b>Research: </b> 3D Object Detection and Tracking<br />
             <b> Email: </b> sw.w@qq.com <br /></p> 
   </td>
