--- a/_pages/group.html
+++ b/_pages/group.html
@@ -359,7 +359,7 @@ author_profile: true
 	    M.Sc. student (Since 2023)</p>
 	<p class="other-info" id="Simin_Hu">
 	    <b>Research: </b> 3D Reconstruction<br />
-            <b> Email: </b> qiyu810@nuaa.edu.cn </p></td>
+            <b> Email: </b> husimin@nuaa.edu.cn </p></td>
    <td><p class="name-grade" id="An_Zhao">
 	    <b>An Zhao</b> <br />
 	    M.Sc. student (Since 2023)</p>
@@ -453,6 +453,7 @@ author_profile: true
 	    Ph.D. student (Graduated in 2023)</p>
 	<p class="other-info" id="Yongzhen_Wang">
 	    <b>Research: </b> Image Restoration and Object Detection<br />
+	    <b>Now: </b>Lecturer, Anhui University of Technology, School of Computer Sciencec and Technology<br />
             <b> Email: </b> wangyz@nuaa.edu.cn </p> 
 	</td>	
 
