--- a/_pages/group.html
+++ b/_pages/group.html
@@ -435,7 +435,7 @@ author_profile: true
   <td> <p class="name-grade" id="Jingbo_Qiu">
 	    <b>Jingbo Qiu</b> <br />
 	    M.Sc. student (Graduated in 2023)</p>
-	<p class="other-info" id="Baian_Chen">
+	<p class="other-info" id="Jingbo_Qiu">
 	    <b>Research: </b> Machine Learning<br />
             <b> Email: </b> qiujingbo@nuaa.edu.cn </p></td>
 </tr>
