--- a/_pages/group.html
+++ b/_pages/group.html
@@ -451,7 +451,8 @@ author_profile: true
 	    Ph.D. student (Graduated in 2023)</p>
 	<p class="other-info" id="Yongzhen_Wang">
 	    <b>Research: </b> Image Restoration and Object Detection<br />
-	    <b>Now: </b>Lecturer, Anhui University of Technology, School of Computer Sciencec and Technology<br />
+	    <b>Now: </b>Lecturer, Anhui University of Technology,<br />
+		School of Computer Sciencec and Technology<br />
             <b> Email: </b> wangyz@nuaa.edu.cn </p> 
 	</td>	
 
